--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
@@ -60,6 +61,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.4.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
