--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "sonner": "^1.5.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
