--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroui/date-input": "^2.3.18",
+    "@heroui/date-picker": "^2.3.19",
     "@hookform/resolvers": "^3.9.0",
     "@lottiefiles/dotlottie-react": "^0.13.3",
     "@mysten/enoki": "^0.6.11",
