--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroui/button": "^2.2.19",
     "@heroui/date-input": "^2.3.18",
     "@heroui/date-picker": "^2.3.19",
+    "@heroui/image": "^2.2.12",
+    "@heroui/input": "^2.4.19",
+    "@heroui/react": "^2.7.8",
     "@hookform/resolvers": "^3.9.0",
     "@lottiefiles/dotlottie-react": "^0.13.3",
     "@mysten/enoki": "^0.6.11",
@@ -70,6 +74,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-textarea-autosize": "^8.5.9",
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
