--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.56.2",
+    "@typeform/embed": "^5.5.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "cloudinary-react": "^1.8.1",
