--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroui/input": "^2.4.19",
     "@heroui/react": "^2.7.8",
     "@hookform/resolvers": "^3.9.0",
+    "@internationalized/date": "^3.8.2",
     "@lottiefiles/dotlottie-react": "^0.13.3",
     "@mysten/enoki": "^0.6.11",
     "@radix-ui/react-accordion": "^1.2.0",
